@@ -2,6 +2,10 @@
 sux0r 2.0.x (CVS)
 ------------------------------------------------------------------------------
 
+Work in progress: In an effort to improved results on skewed training data, I
+am trying to adjust the value of the fake probability to that of the median of
+the token count for the vector.
+
 Bugfix: array_merge() re-numbers keys which was causing problems with the
 redunancy checking in Naive Bayesian filtering
 
